--- a/Translation/item.json
+++ b/Translation/item.json
@@ -22,7 +22,7 @@
         "en":"Armor",
         "fr":"Armure",
         "es":"Armadura",
-        "zh-cn":"衣服",
+        "zh-cn":"胸甲",
         "zh-tw":"",
         "kr":"",
         "ru":"Броня",
@@ -60,7 +60,7 @@
         "en":"Gloves",
         "fr":"Gants",
         "es":"Guantes",
-        "zh-cn":"手套",
+        "zh-cn":"护手",
         "zh-tw":"",
         "kr":"",
         "ru":"Руки",
@@ -2530,7 +2530,7 @@
         "en":"Thinskin Gloves",
         "fr":"Gants en Peau de Bête",
         "es":"",
-        "zh-cn":"新人手套",
+        "zh-cn":"新人护手",
         "zh-tw":"",
         "kr":"",
         "ru":"Тонкие Перчатки",
@@ -2549,7 +2549,7 @@
         "en":"Hardskin Gloves",
         "fr":"Gants Protecteurs",
         "es":"",
-        "zh-cn":"硬皮手套",
+        "zh-cn":"硬皮护手",
         "zh-tw":"",
         "kr":"",
         "ru":"Защитные Перчатки",
@@ -2568,7 +2568,7 @@
         "en":"Purple Gloves",
         "fr":"Gants Pourpres",
         "es":"",
-        "zh-cn":"绛红手套",
+        "zh-cn":"绛红护手",
         "zh-tw":"",
         "kr":"",
         "ru":"Фиолетовые Перчатки",
@@ -2606,7 +2606,7 @@
         "en":"Dole Gloves",
         "fr":"Gants d'une Dole",
         "es":"",
-        "zh-cn":"木偶手套",
+        "zh-cn":"木偶护手",
         "zh-tw":"",
         "kr":"",
         "ru":"Перчатки Доула",
@@ -2682,7 +2682,7 @@
         "en":"Destined Gloves",
         "fr":"Gants de la Destinée",
         "es":"",
-        "zh-cn":"命运手套",
+        "zh-cn":"命运护手",
         "zh-tw":"",
         "kr":"",
         "ru":"Перчатки Судьбы",
@@ -3404,7 +3404,7 @@
         "en":"Storm Array - Armor",
         "fr":"Tempête - Armure",
         "es":"",
-        "zh-cn":"风暴系列 - 衣服",
+        "zh-cn":"风暴系列 - 胸甲",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3442,7 +3442,7 @@
         "en":"Miser - Armor",
         "fr":"Avare - Casque",
         "es":"",
-        "zh-cn":"守财奴 - 衣服",
+        "zh-cn":"守财奴 - 胸甲",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3537,7 +3537,7 @@
         "en":"Pirate King - Gloves",
         "fr":"Roi Pirate - Gants",
         "es":"",
-        "zh-cn":"海贼王 - 手套",
+        "zh-cn":"海贼王 - 护手",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3594,7 +3594,7 @@
 		"en": "Darren - Weapon",
 		"fr": "Darren - Arme",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "达伦 - 武器",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3613,7 +3613,7 @@
 		"en": "Darren - Gloves",
 		"fr": "Darren - Gants",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "达伦 - 护手",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3632,7 +3632,7 @@
 		"en": "Darren - Helmet",
 		"fr": "Darren - Casque",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "达伦 -  头盔",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3651,7 +3651,7 @@
 		"en": "Darren - Armor",
 		"fr": "Darren - Armure",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "达伦 - 胸甲",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3670,7 +3670,7 @@
 		"en": "Darren - Belt",
 		"fr": "Darren - Ceinture",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "达伦 - 腰带",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3689,7 +3689,7 @@
 		"en": "Syndra - Necklace",
 		"fr": "Syndra - Collier",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "辛德拉 - 项链",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3708,7 +3708,7 @@
 		"en": "Syndra - Ring",
 		"fr": "Syndra - Anneau",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "辛德拉 - 戒指",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3727,7 +3727,7 @@
 		"en": "Syndra - Boots",
 		"fr": "Syndra - Bottes",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "辛德拉 - 鞋子",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3746,7 +3746,7 @@
 		"en": "Syndra - Cape",
 		"fr": "Syndra - Cape",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "辛德拉 - 披风",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3766,7 +3766,7 @@
 		"en": "Victim - Helmet",
 		"fr": "Victime - Casque",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "被害者 - 头盔",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3785,7 +3785,7 @@
 		"en": "Victim - Armor",
 		"fr": "Victime - Armure",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "被害者 - 胸甲",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3804,7 +3804,7 @@
 		"en": "Victim - Boots",
 		"fr": "Victime - Bottes",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "被害者 - 鞋子",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3823,7 +3823,7 @@
 		"en": "Victim - Cape",
 		"fr": "Victime - Cape",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "被害者 - 披风",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3842,7 +3842,7 @@
 		"en": "Victim - Belt",
 		"fr": "Victime - Ceinture",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "被害者 - 腰带",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3861,7 +3861,7 @@
 		"en": "Perpetrator - Weapon",
 		"fr": "Perpetrator - Arme",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "加害者 - 武器",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3880,7 +3880,7 @@
 		"en": "Perpetrator - Gloves",
 		"fr": "Perpetrator - Gants",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "加害者 - 护手",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3899,7 +3899,7 @@
 		"en": "Perpetrator - Necklace",
 		"fr": "Perpetrator - Collier",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "加害者 - 项链",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3918,7 +3918,7 @@
 		"en": "Perpetrator - Ring",
 		"fr": "Perpetrator - Anneau",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "加害者 - 戒指",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3938,7 +3938,7 @@
 		"en": "Leviathan - Weapon",
 		"fr": "Leviathan - Arme",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "利维坦 - 武器",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3957,7 +3957,7 @@
 		"en": "Leviathan - Gloves",
 		"fr": "Leviathan - Gants",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "利维坦 - 护手",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3976,7 +3976,7 @@
 		"en": "Leviathan - Boots",
 		"fr": "Leviathan - Bottes",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "利维坦 - 鞋子",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -3995,7 +3995,7 @@
 		"en": "Leviathan - Necklace",
 		"fr": "Leviathan - Collier",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "利维坦 - 项链",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4014,7 +4014,7 @@
 		"en": "Leviathan - Cape",
 		"fr": "Leviathan - Cape",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "利维坦 - 披风",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4033,7 +4033,7 @@
 		"en": "Behemoth - Helmet",
 		"fr": "Behemoth - Casque",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "贝希摩斯 - 头盔",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4052,7 +4052,7 @@
 		"en": "Behemoth - Armor",
 		"fr": "Behemoth - Armure",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "贝希摩斯 - 胸甲",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4071,7 +4071,7 @@
 		"en": "Behemoth - Belt",
 		"fr": "Behemoth - Ceinture",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "贝希摩斯 - 腰带",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4090,7 +4090,7 @@
 		"en": "Behemoth - Ring",
 		"fr": "Behemoth - Anneau",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "贝希摩斯 - 戒指",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4109,7 +4109,7 @@
 		"en": "Nortilas - Weapon",
 		"fr": "Nortilas - Arme",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "诺第留斯 - 武器",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4128,7 +4128,7 @@
 		"en": "Nortilas - Helmet",
 		"fr": "Nortilas - Casque",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "诺第留斯 - 头盔",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4147,7 +4147,7 @@
 		"en": "Nortilas - Gloves",
 		"fr": "Nortilas - Gants",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "诺第留斯 - 护手",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4166,7 +4166,7 @@
 		"en": "Ocean Heart - Ring",
 		"fr": "Coeur de l'Ocean - Anneau",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "海洋之心 - 戒指",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4185,7 +4185,7 @@
 		"en": "Ocean Heart - Necklace",
 		"fr": "Coeur de l'Ocean - Collier",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "海洋之心 - 项链",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4205,7 +4205,7 @@
 		"en": "Nightwatcher - Weapon",
 		"fr": "Veilleur de nuit - Arme",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守夜者 - 武器",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4224,7 +4224,7 @@
 		"en": "Nightwatcher - Gloves",
 		"fr": "Veilleur de nuit - Gants",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守夜者 - 护手",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4243,7 +4243,7 @@
 		"en": "Nightwatcher - Boots",
 		"fr": "Veilleur de nuit - Bottes",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守夜者 - 鞋子",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4262,7 +4262,7 @@
 		"en": "Nightwatcher - Necklace",
 		"fr": "Veilleur de nuit - Collier",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守夜者 - 项链",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4281,7 +4281,7 @@
 		"en": "Nightwatcher - Cape",
 		"fr": "Veilleur de nuit - Cape",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守夜者 - 披风",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4300,7 +4300,7 @@
 		"en": "Nightwatcher - Helmet",
 		"fr": "Veilleur de nuit - Casque",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守夜者 - 头盔",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4319,7 +4319,7 @@
 		"en": "Nightwatcher - Armor",
 		"fr": "Veilleur de nuit - Armure",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守夜者 - 胸甲",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4338,7 +4338,7 @@
 		"en": "Nightwatcher - Belt",
 		"fr": "Veilleur de nuit - Ceinture",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守夜者 - 腰带",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4357,7 +4357,7 @@
 		"en": "Nightwatcher - Ring",
 		"fr": "Veilleur de nuit - Anneau",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守夜者 - 戒指",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4377,7 +4377,7 @@
 		"en": "Daydefender - Weapon",
 		"fr": "Défenseur du Jour - Arme",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守日人 - 武器",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4396,7 +4396,7 @@
 		"en": "Daydefender - Gloves",
 		"fr": "Défenseur du Jour - Gants",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守日人 - 护手",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4415,7 +4415,7 @@
 		"en": "Daydefender - Boots",
 		"fr": "Défenseur du Jour - Bottes",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守日人 - 鞋子",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4434,7 +4434,7 @@
 		"en": "Daydefender - Necklace",
 		"fr": "Défenseur du Jour - Collier",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守日人 - 项链",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4453,7 +4453,7 @@
 		"en": "Daydefender - Cape",
 		"fr": "Défenseur du Jour - Cape",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守日人 - 披风",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4472,7 +4472,7 @@
 		"en": "Daydefender - Helmet",
 		"fr": "Défenseur du Jour - Casque",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守日人 - 头盔",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4491,7 +4491,7 @@
 		"en": "Daydefender - Armor",
 		"fr": "Défenseur du Jour - Armure",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守日人 - 胸甲",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4510,7 +4510,7 @@
 		"en": "Daydefender - Belt",
 		"fr": "Défenseur du Jour - Ceinture",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守日人 - 腰带",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4529,7 +4529,7 @@
 		"en": "Daydefender - Ring",
 		"fr": "Défenseur du Jour - Anneau",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "守日人 - 戒指",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4549,7 +4549,7 @@
 		"en": "Duskreaver - Weapon",
 		"fr": "Saccageur du Crépuscule - Arme",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "黃昏使者 - 武器",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4568,7 +4568,7 @@
 		"en": "Duskreaver - Gloves",
 		"fr": "Saccageur du Crépuscule - Gants",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "黃昏使者 - 护手",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4587,7 +4587,7 @@
 		"en": "Duskreaver - Boots",
 		"fr": "Saccageur du Crépuscule - Bottes",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "黃昏使者 - 鞋子",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4606,7 +4606,7 @@
 		"en": "Duskreaver - Necklace",
 		"fr": "Saccageur du Crépuscule - Collier",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "黃昏使者 - 项链",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4625,7 +4625,7 @@
 		"en": "Duskreaver - Cape",
 		"fr": "Saccageur du Crépuscule - Cape",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "黃昏使者 - 披风",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4644,7 +4644,7 @@
 		"en": "Duskreaver - Helmet",
 		"fr": "Saccageur du Crépuscule - Casque",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "黃昏使者 - 头盔",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4663,7 +4663,7 @@
 		"en": "Duskreaver - Armor",
 		"fr": "Saccageur du Crépuscule - Armure",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "黃昏使者 - 胸甲",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4682,7 +4682,7 @@
 		"en": "Duskreaver - Belt",
 		"fr": "Saccageur du Crépuscule - Ceinture",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "黃昏使者 - 腰带",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -4701,7 +4701,7 @@
 		"en": "Duskreaver - Ring",
 		"fr": "Saccageur du Crépuscule - Anneau",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "黃昏使者 - 戒指",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
