--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3859,7 +3859,7 @@
 	},
 	"item.2028.name": {
 		"en": "Perpetrator - Weapon",
-		"fr": "Perpetrator - Arme",
+		"fr": "Perpétrateur - Arme",
 		"es": "",
 		"zh-cn": "加害者 - 武器",
 		"zh-tw": "",
@@ -3878,7 +3878,7 @@
 	},
 	"item.2029.name": {
 		"en": "Perpetrator - Gloves",
-		"fr": "Perpetrator - Gants",
+		"fr": "Perpétrateur - Gants",
 		"es": "",
 		"zh-cn": "加害者 - 护手",
 		"zh-tw": "",
@@ -3897,7 +3897,7 @@
 	},
 	"item.2030.name": {
 		"en": "Perpetrator - Necklace",
-		"fr": "Perpetrator - Collier",
+		"fr": "Perpétrateur - Collier",
 		"es": "",
 		"zh-cn": "加害者 - 项链",
 		"zh-tw": "",
@@ -3916,7 +3916,7 @@
 	},
 	"item.2031.name": {
 		"en": "Perpetrator - Ring",
-		"fr": "Perpetrator - Anneau",
+		"fr": "Perpétrateur - Anneau",
 		"es": "",
 		"zh-cn": "加害者 - 戒指",
 		"zh-tw": "",
@@ -3936,7 +3936,7 @@
 
 	"item.2032.name": {
 		"en": "Leviathan - Weapon",
-		"fr": "Leviathan - Arme",
+		"fr": "Léviathan - Arme",
 		"es": "",
 		"zh-cn": "利维坦 - 武器",
 		"zh-tw": "",
@@ -3955,7 +3955,7 @@
 	},
 	"item.2033.name": {
 		"en": "Leviathan - Gloves",
-		"fr": "Leviathan - Gants",
+		"fr": "Léviathan - Gants",
 		"es": "",
 		"zh-cn": "利维坦 - 护手",
 		"zh-tw": "",
@@ -3974,7 +3974,7 @@
 	},
 	"item.2034.name": {
 		"en": "Leviathan - Boots",
-		"fr": "Leviathan - Bottes",
+		"fr": "Léviathan - Bottes",
 		"es": "",
 		"zh-cn": "利维坦 - 鞋子",
 		"zh-tw": "",
@@ -3993,7 +3993,7 @@
 	},
 	"item.2035.name": {
 		"en": "Leviathan - Necklace",
-		"fr": "Leviathan - Collier",
+		"fr": "Léviathan - Collier",
 		"es": "",
 		"zh-cn": "利维坦 - 项链",
 		"zh-tw": "",
@@ -4012,7 +4012,7 @@
 	},
 	"item.2036.name": {
 		"en": "Leviathan - Cape",
-		"fr": "Leviathan - Cape",
+		"fr": "Léviathan - Cape",
 		"es": "",
 		"zh-cn": "利维坦 - 披风",
 		"zh-tw": "",
@@ -4031,7 +4031,7 @@
 	},
 	"item.2037.name": {
 		"en": "Behemoth - Helmet",
-		"fr": "Behemoth - Casque",
+		"fr": "Béhémoth - Casque",
 		"es": "",
 		"zh-cn": "贝希摩斯 - 头盔",
 		"zh-tw": "",
@@ -4050,7 +4050,7 @@
 	},
 	"item.2038.name": {
 		"en": "Behemoth - Armor",
-		"fr": "Behemoth - Armure",
+		"fr": "Béhémoth - Armure",
 		"es": "",
 		"zh-cn": "贝希摩斯 - 胸甲",
 		"zh-tw": "",
@@ -4069,7 +4069,7 @@
 	},
 	"item.2039.name": {
 		"en": "Behemoth - Belt",
-		"fr": "Behemoth - Ceinture",
+		"fr": "Béhémoth - Ceinture",
 		"es": "",
 		"zh-cn": "贝希摩斯 - 腰带",
 		"zh-tw": "",
@@ -4088,7 +4088,7 @@
 	},
 	"item.2040.name": {
 		"en": "Behemoth - Ring",
-		"fr": "Behemoth - Anneau",
+		"fr": "Béhémoth - Anneau",
 		"es": "",
 		"zh-cn": "贝希摩斯 - 戒指",
 		"zh-tw": "",
@@ -4164,7 +4164,7 @@
 	},
 	"item.2044.name": {
 		"en": "Ocean Heart - Ring",
-		"fr": "Coeur de l'Ocean - Anneau",
+		"fr": "Coeur de l'Océan - Anneau",
 		"es": "",
 		"zh-cn": "海洋之心 - 戒指",
 		"zh-tw": "",
@@ -4183,7 +4183,7 @@
 	},
 	"item.2045.name": {
 		"en": "Ocean Heart - Necklace",
-		"fr": "Coeur de l'Ocean - Collier",
+		"fr": "Coeur de l'Océan - Collier",
 		"es": "",
 		"zh-cn": "海洋之心 - 项链",
 		"zh-tw": "",
