--- a/Translation/item.json
+++ b/Translation/item.json
@@ -18784,6 +18784,690 @@
 		"th": "",
 		"id": ""
 	},
+    	"item.71001.name": {
+		"en": "Angel Wings - I",
+		"fr": "Ailes d'Ange - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71002.name": {
+		"en": "Angel Wings - II",
+		"fr": "Ailes d'Ange - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71003.name": {
+		"en": "Angel Wings - III",
+		"fr": "Ailes d'Ange - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71004.name": {
+		"en": "Angel Wings - IV",
+		"fr": "Ailes d'Ange - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71005.name": {
+		"en": "Devil Wings - I",
+		"fr": "Ailes du Diable - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71006.name": {
+		"en": "Devil Wings - II",
+		"fr": "Ailes du Diable - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71007.name": {
+		"en": "Devil Wings - III",
+		"fr": "Ailes du Diable - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71008.name": {
+		"en": "Devil Wings - IV",
+		"fr": "Ailes du Diable - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71009.name": {
+		"en": "Moonlight Butterfly - I",
+		"fr": "Papillon Clair de lune - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71010.name": {
+		"en": "Moonlight Butterfly - II",
+		"fr": "Papillon Clair de lune - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71011.name": {
+		"en": "Moonlight Butterfly - III",
+		"fr": "Papillon Clair de lune - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71012.name": {
+		"en": "Moonlight Butterfly - IV",
+		"fr": "Papillon Clair de lune - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71013.name": {
+		"en": "Dragon Wings - I",
+		"fr": "Ailes de Dragon - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71014.name": {
+		"en": "Dragon Wings - II",
+		"fr": "Ailes de Dragon - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71015.name": {
+		"en": "Dragon Wings - III",
+		"fr": "Ailes de Dragon - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71016.name": {
+		"en": "Dragon Wings - IV",
+		"fr": "Ailes de Dragon - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71017.name": {
+		"en": "Phoenix - I",
+		"fr": "Phénix - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71018.name": {
+		"en": "Phoenix - II",
+		"fr": "Phénix - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71019.name": {
+		"en": "Phoenix - III",
+		"fr": "Phénix - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71020.name": {
+		"en": "Phoenix - IV",
+		"fr": "Phénix - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71021.name": {
+		"en": "Wings of Destiny - I",
+		"fr": "Ailes du Destin - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71022.name": {
+		"en": "Wings of Destiny - II",
+		"fr": "Ailes du Destin - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71023.name": {
+		"en": "Wings of Destiny - III",
+		"fr": "Ailes du Destin - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71024.name": {
+		"en": "Wings of Destiny - IV",
+		"fr": "Ailes du Destin - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71025.name": {
+		"en": "Pegasus Wings - I",
+		"fr": "Ailes de Pégase - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71026.name": {
+		"en": "Pegasus Wings - II",
+		"fr": "Ailes de Pégase - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71027.name": {
+		"en": "Pegasus Wings - III",
+		"fr": "Ailes de Pégase - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71028.name": {
+		"en": "Pegasus Wings - IV",
+		"fr": "Ailes de Pégase - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71029.name": {
+		"en": "Golden Pegasus wings - I",
+		"fr": "Ailes de Pégase doré - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71030.name": {
+		"en": "Golden Pegasus wings - II",
+		"fr": "Ailes de Pégase doré - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71031.name": {
+		"en": "Golden Pegasus wings - III",
+		"fr": "Ailes de Pégase doré - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71032.name": {
+		"en": "Golden Pegasus wings - IV",
+		"fr": "Ailes de Pégase doré - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71033.name": {
+		"en": "Cloak - I",
+		"fr": "Cape - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71034.name": {
+		"en": "Cloak - II",
+		"fr": "Cape - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71035.name": {
+		"en": "Cloak - III",
+		"fr": "Cape - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71036.name": {
+		"en": "Cloak - IV",
+		"fr": "Cape - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
     "item.1200.description":{
         "en":"I'm pursuing speed",
         "fr":"je recherche la vitesse",
