--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -7812,7 +7812,7 @@
         "en":"Behemoth",
 		"fr": "Béhémoth",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"贝希摩斯",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -7831,7 +7831,7 @@
         "en":"Nortilas",
 		"fr": "Nortilas",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"诺第留斯",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -7850,7 +7850,7 @@
         "en":"Ocean Heart",
 		"fr": "Coeur de l'Océan",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"海洋之心",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -7869,7 +7869,7 @@
         "en":"Nightwatcher",
 		"fr": "Veilleur de nuit",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"守夜者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -7888,7 +7888,7 @@
         "en":"Daydefender",
 		"fr": "Défenseur du Jour",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"守日人",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -7904,10 +7904,10 @@
         "id":""
     },
     "UI.windows.runes.Duskreaver.name":{
-        "en":"Daydefender",
+        "en":"Duskreaver",
 		"fr": "Saccageur du Crépuscule",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"黃昏使者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
