--- a/Translation/item.json
+++ b/Translation/item.json
@@ -18788,7 +18788,7 @@
 		"en": "Angel Wings - I",
 		"fr": "Ailes d'Ange - I",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "天使之翼 - I",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18807,7 +18807,7 @@
 		"en": "Angel Wings - II",
 		"fr": "Ailes d'Ange - II",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "天使之翼 - II",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18826,7 +18826,7 @@
 		"en": "Angel Wings - III",
 		"fr": "Ailes d'Ange - III",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "天使之翼 - III",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18845,7 +18845,7 @@
 		"en": "Angel Wings - IV",
 		"fr": "Ailes d'Ange - IV",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "天使之翼 - IV",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18864,7 +18864,7 @@
 		"en": "Devil Wings - I",
 		"fr": "Ailes du Diable - I",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "恶魔之羽 - I",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18883,7 +18883,7 @@
 		"en": "Devil Wings - II",
 		"fr": "Ailes du Diable - II",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "恶魔之羽 - II",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18902,7 +18902,7 @@
 		"en": "Devil Wings - III",
 		"fr": "Ailes du Diable - III",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "恶魔之羽 - III",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18921,7 +18921,7 @@
 		"en": "Devil Wings - IV",
 		"fr": "Ailes du Diable - IV",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "恶魔之羽 - IV",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18940,7 +18940,7 @@
 		"en": "Moonlight Butterfly - I",
 		"fr": "Papillon Clair de lune - I",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "月光蝶 - I",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18959,7 +18959,7 @@
 		"en": "Moonlight Butterfly - II",
 		"fr": "Papillon Clair de lune - II",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "月光蝶 - II",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18978,7 +18978,7 @@
 		"en": "Moonlight Butterfly - III",
 		"fr": "Papillon Clair de lune - III",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "月光蝶 - III",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -18997,7 +18997,7 @@
 		"en": "Moonlight Butterfly - IV",
 		"fr": "Papillon Clair de lune - IV",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "月光蝶 - IV",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19016,7 +19016,7 @@
 		"en": "Dragon Wings - I",
 		"fr": "Ailes de Dragon - I",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "龙之翼 - I",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19035,7 +19035,7 @@
 		"en": "Dragon Wings - II",
 		"fr": "Ailes de Dragon - II",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "龙之翼 - II",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19054,7 +19054,7 @@
 		"en": "Dragon Wings - III",
 		"fr": "Ailes de Dragon - III",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "龙之翼 - III",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19073,7 +19073,7 @@
 		"en": "Dragon Wings - IV",
 		"fr": "Ailes de Dragon - IV",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "龙之翼 - IV",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19092,7 +19092,7 @@
 		"en": "Phoenix - I",
 		"fr": "Phénix - I",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "凤凰之羽 - I",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19111,7 +19111,7 @@
 		"en": "Phoenix - II",
 		"fr": "Phénix - II",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "凤凰之羽 - II",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19130,7 +19130,7 @@
 		"en": "Phoenix - III",
 		"fr": "Phénix - III",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "凤凰之羽 - III",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19149,7 +19149,7 @@
 		"en": "Phoenix - IV",
 		"fr": "Phénix - IV",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "凤凰之羽 - IV",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19168,7 +19168,7 @@
 		"en": "Wings of Destiny - I",
 		"fr": "Ailes du Destin - I",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "命运之翼 - I",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19187,7 +19187,7 @@
 		"en": "Wings of Destiny - II",
 		"fr": "Ailes du Destin - II",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "命运之翼 - II",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19206,7 +19206,7 @@
 		"en": "Wings of Destiny - III",
 		"fr": "Ailes du Destin - III",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "命运之翼 - III",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19225,7 +19225,7 @@
 		"en": "Wings of Destiny - IV",
 		"fr": "Ailes du Destin - IV",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "命运之翼 - IV",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19244,7 +19244,7 @@
 		"en": "Pegasus Wings - I",
 		"fr": "Ailes de Pégase - I",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "飞马之翅 - I",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19263,7 +19263,7 @@
 		"en": "Pegasus Wings - II",
 		"fr": "Ailes de Pégase - II",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "飞马之翅 - II",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19282,7 +19282,7 @@
 		"en": "Pegasus Wings - III",
 		"fr": "Ailes de Pégase - III",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "飞马之翅 - III",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19301,7 +19301,7 @@
 		"en": "Pegasus Wings - IV",
 		"fr": "Ailes de Pégase - IV",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "飞马之翅 - IV",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19320,7 +19320,7 @@
 		"en": "Golden Pegasus wings - I",
 		"fr": "Ailes de Pégase doré - I",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "金色飞马之翅 - I",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19339,7 +19339,7 @@
 		"en": "Golden Pegasus wings - II",
 		"fr": "Ailes de Pégase doré - II",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "金色飞马之翅 - II",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19358,7 +19358,7 @@
 		"en": "Golden Pegasus wings - III",
 		"fr": "Ailes de Pégase doré - III",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "金色飞马之翅 - III",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19377,7 +19377,7 @@
 		"en": "Golden Pegasus wings - IV",
 		"fr": "Ailes de Pégase doré - IV",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "金色飞马之翅 - IV",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19396,7 +19396,7 @@
 		"en": "Cloak - I",
 		"fr": "Cape - I",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "斗篷 - I",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19415,7 +19415,7 @@
 		"en": "Cloak - II",
 		"fr": "Cape - II",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "斗篷 - II",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19434,7 +19434,7 @@
 		"en": "Cloak - III",
 		"fr": "Cape - III",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "斗篷 - III",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
@@ -19453,7 +19453,7 @@
 		"en": "Cloak - IV",
 		"fr": "Cape - IV",
 		"es": "",
-		"zh-cn": "",
+		"zh-cn": "斗篷 - IV",
 		"zh-tw": "",
 		"kr": "",
 		"ru": "",
